Fix up some build variables and make it compile and run

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
-build/
+SpaceFuckery/CEGUI.log
+SpaceFuckery/Ogre.log
+SpaceFuckery/SpaceFuckery
+SpaceFuckery/SpaceFuckery.depend
+SpaceFuckery/SpaceFuckery.layout
+SpaceFuckery/lib_finder.script
+SpaceFuckery/obj/
+SpaceFuckery/ogre.cfg
