--- a/SpaceFuckery/etc/resources.cfg
+++ b/SpaceFuckery/etc/resources.cfg
@@ -1,9 +1,9 @@
 # SpaceFuckery
 [General]
-FileSystem=media
-FileSystem=media/materials/scripts
-FileSystem=media/materials/textures
-FileSystem=media/models
+FileSystem=../media
+FileSystem=../media/materials/scripts
+FileSystem=../media/materials/textures
+FileSystem=../media/models
 # Path to the CEGUI schemas for resource configuration
 FileSystem=/usr/share/cegui-0/xml_schemas
 
@@ -17,5 +17,5 @@ FileSystem=/usr/share/cegui-0/schemes
 [LookNFeel]
 FileSystem=/usr/share/cegui-0/looknfeel
 [Layouts]
-FileSystem=media/layouts
+FileSystem=../media/layouts
 FileSystem=/usr/share/cegui-0/layouts
