--- a/SpaceFuckery/SpaceFuckery.cbp
+++ b/SpaceFuckery/SpaceFuckery.cbp
@@ -6,6 +6,7 @@
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
+			<Script file="lib_finder.script" />
 			<Target title="Debug">
 				<Option output="./SpaceFuckery" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
@@ -15,8 +16,7 @@
 					<Add option="-g" />
 				</Compiler>
 				<Linker>
-					<Add library="OgreMain" />
-					<Add library="OIS" />
+					<Add library="boost_system" />
 				</Linker>
 			</Target>
 			<Target title="Release">
@@ -35,13 +35,9 @@
 			</Target>
 		</Build>
 		<Compiler>
-			<Add option="`pkg-config --cflags OGRE`" />
 			<Add option="-Wall" />
-			<Add option="-fexceptions" />
 		</Compiler>
 		<Linker>
-			<Add option="`pkg-config --libs OGRE`" />
-			<Add library="GL" />
 			<Add directory="/bin/Debug" />
 			<Add directory="/bin/Release" />
 		</Linker>
@@ -54,8 +50,6 @@
 			<code_completion />
 			<envvars />
 			<lib_finder disable_auto="1">
-				<lib name="OGRE" />
-				<lib name="CEGUI-0" />
 				<lib name="CEGUI-0-OGRE" />
 				<lib name="OIS" />
 			</lib_finder>
