--- a/SpaceFuckery/SpaceFuckery.cbp
+++ b/SpaceFuckery/SpaceFuckery.cbp
@@ -3,10 +3,10 @@
 	<FileVersion major="1" minor="6" />
 	<Project>
 		<Option title="SpaceFuckery" />
+		<Option platforms="Unix;" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
-			<Script file="lib_finder.script" />
 			<Target title="Debug">
 				<Option output="./SpaceFuckery" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
