Updated gitignore with some new files

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,6 @@ SpaceFuckery/Ogre.log
 SpaceFuckery/SpaceFuckery
 SpaceFuckery/SpaceFuckery.depend
 SpaceFuckery/SpaceFuckery.layout
-SpaceFuckery/lib_finder.script
 SpaceFuckery/obj/
 SpaceFuckery/ogre.cfg
+SpaceFuckery/CppCheckResults.xml
