--- a/SpaceFuckery/SpaceFuckery.cbp
+++ b/SpaceFuckery/SpaceFuckery.cbp
@@ -13,6 +13,10 @@
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
+					<Add option="-std=c++11" />
+					<Add option="-Wextra" />
+					<Add option="-Wall" />
+					<Add option="-ansi" />
 					<Add option="-g" />
 				</Compiler>
 				<Linker>
