--- a/SpaceFuckery/SpaceFuckery.cbp
+++ b/SpaceFuckery/SpaceFuckery.cbp
@@ -8,9 +8,10 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
+				<Option platforms="Unix;" />
 				<Option output="./SpaceFuckery" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
-				<Option type="1" />
+				<Option type="0" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-pedantic" />
@@ -19,12 +20,14 @@
 					<Add option="-Wall" />
 					<Add option="-ansi" />
 					<Add option="-g" />
+					<Add option="-Wno-unused" />
 				</Compiler>
 				<Linker>
 					<Add library="boost_system" />
 				</Linker>
 			</Target>
 			<Target title="Release">
+				<Option platforms="Unix;" />
 				<Option output="./SpaceFuckery" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="0" />
@@ -46,10 +49,12 @@
 			<Add directory="/bin/Debug" />
 			<Add directory="/bin/Release" />
 		</Linker>
-		<Unit filename="SpaceFuckery.cpp" />
-		<Unit filename="SpaceFuckery.h" />
+		<Unit filename="Application.cpp" />
+		<Unit filename="Application.h" />
 		<Unit filename="etc/plugins.cfg" />
 		<Unit filename="etc/resources.cfg" />
+		<Unit filename="frameListener.cpp" />
+		<Unit filename="frameListener.h" />
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
