Switched my test model to Suzanne ! I feel much better

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ SpaceFuckery/SpaceFuckery.layout
 SpaceFuckery/obj/
 SpaceFuckery/ogre.cfg
 SpaceFuckery/CppCheckResults.xml
+SpaceFuckery/ValgrindOut.xml
