--- a/SpaceFuckery/SpaceFuckery.cbp
+++ b/SpaceFuckery/SpaceFuckery.cbp
@@ -70,12 +70,15 @@
 		<Unit filename="etc/plugins.cfg" />
 		<Unit filename="etc/resources.cfg" />
 		<Unit filename="main.cpp" />
+		<Unit filename="physicsEngine.cpp" />
+		<Unit filename="physicsEngine.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
 			<lib_finder disable_auto="1">
 				<lib name="OIS" />
 				<lib name="CEGUI-0-OGRE" />
+				<lib name="bullet" />
 			</lib_finder>
 			<debugger />
 		</Extensions>
