--- a/SpaceFuckery/SpaceFuckery.cbp
+++ b/SpaceFuckery/SpaceFuckery.cbp
@@ -14,17 +14,11 @@
 				<Option type="0" />
 				<Option compiler="gcc" />
 				<Compiler>
-					<Add option="-pedantic" />
-					<Add option="-std=c++11" />
-					<Add option="-Wextra" />
-					<Add option="-Wall" />
-					<Add option="-ansi" />
+					<Add option="-pg" />
 					<Add option="-g" />
-					<Add option="-Wno-unused" />
-					<Add option="-Wno-long-long" />
 				</Compiler>
 				<Linker>
-					<Add library="boost_system" />
+					<Add option="-pg" />
 				</Linker>
 			</Target>
 			<Target title="Release">
@@ -37,33 +31,21 @@
 					<Add option="-fomit-frame-pointer" />
 					<Add option="-fexpensive-optimizations" />
 					<Add option="-O3" />
-					<Add option="-pedantic" />
-					<Add option="-std=c++11" />
-					<Add option="-Wextra" />
-					<Add option="-Wall" />
-					<Add option="-ansi" />
-					<Add option="-Wno-unused" />
-					<Add option="-Wno-long-long" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
-					<Add library="boost_system" />
 				</Linker>
 			</Target>
 		</Build>
 		<Compiler>
 			<Add option="-pedantic" />
 			<Add option="-std=c++11" />
-			<Add option="-Wextra" />
 			<Add option="-Wall" />
 			<Add option="-ansi" />
 			<Add option="-Wno-unused" />
-			<Add option="-Wno-long-long" />
 		</Compiler>
 		<Linker>
 			<Add library="boost_system" />
-			<Add directory="/bin/Debug" />
-			<Add directory="/bin/Release" />
 		</Linker>
 		<Unit filename="Application.cpp" />
 		<Unit filename="Application.h" />
