Orbital calculation - Part 1 (#2)
 * Introduce the Orbit object (which sucks for now)
 * Fix some of the timesteps issue
 * Make a scene that helps debug the orbital elements.

--- a/SpaceFuckery/SpaceFuckery.cbp
+++ b/SpaceFuckery/SpaceFuckery.cbp
@@ -48,12 +48,15 @@
 		<Unit filename="../media/layouts/flight.layout" />
 		<Unit filename="Application.cpp" />
 		<Unit filename="Application.h" />
+		<Unit filename="Constants.h" />
 		<Unit filename="FrameListener.cpp" />
 		<Unit filename="FrameListener.h" />
 		<Unit filename="KeyListener.cpp" />
 		<Unit filename="KeyListener.h" />
 		<Unit filename="MouseListener.cpp" />
 		<Unit filename="MouseListener.h" />
+		<Unit filename="Orbit.cpp" />
+		<Unit filename="Orbit.h" />
 		<Unit filename="WindowEventListener.cpp" />
 		<Unit filename="WindowEventListener.h" />
 		<Unit filename="etc/plugins.cfg" />
