--- a/SpaceFuckery/SpaceFuckery.cbp
+++ b/SpaceFuckery/SpaceFuckery.cbp
@@ -9,7 +9,7 @@
 		<Build>
 			<Target title="Debug">
 				<Option platforms="Unix;" />
-				<Option output="./SpaceFuckery" prefix_auto="1" extension_auto="1" />
+				<Option output="../../workdir/bin/SpaceFuckery" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="0" />
 				<Option compiler="gcc" />
@@ -23,7 +23,7 @@
 			</Target>
 			<Target title="Release">
 				<Option platforms="Unix;" />
-				<Option output="./SpaceFuckery" prefix_auto="1" extension_auto="1" />
+				<Option output="../../workdir/bin/SpaceFuckery" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="0" />
 				<Option compiler="gcc" />
@@ -38,12 +38,17 @@
 			</Target>
 		</Build>
 		<Compiler>
+			<Add option="-pedantic" />
 			<Add option="-std=c++14" />
+			<Add option="-Wextra" />
 			<Add option="-Wall" />
 			<Add option="-Wno-unused" />
+			<Add directory="../../mKOST/src" />
 		</Compiler>
 		<Linker>
 			<Add library="boost_system" />
+			<Add library="mKOST" />
+			<Add directory="../../workdir/lib" />
 		</Linker>
 		<Unit filename="../media/layouts/flight.layout" />
 		<Unit filename="Application.cpp" />
@@ -55,8 +60,8 @@
 		<Unit filename="KeyListener.h" />
 		<Unit filename="MouseListener.cpp" />
 		<Unit filename="MouseListener.h" />
-		<Unit filename="Orbit.cpp" />
-		<Unit filename="Orbit.h" />
+		<Unit filename="Ship.cpp" />
+		<Unit filename="Ship.h" />
 		<Unit filename="WindowEventListener.cpp" />
 		<Unit filename="WindowEventListener.h" />
 		<Unit filename="etc/plugins.cfg" />
@@ -69,8 +74,8 @@
 			<envvars />
 			<lib_finder disable_auto="0">
 				<lib name="OIS" />
-				<lib name="CEGUI-0-OGRE" />
 				<lib name="bullet" />
+				<lib name="CEGUI-0-OGRE" />
 			</lib_finder>
 			<debugger />
 		</Extensions>
